# compitum

./: CMakeLists.txt  README.md  faction.hpp  infrastructure.cpp  infrastructure.hpp  interactor.cpp  interactor.hpp  main.cpp  population.cpp  population.hpp  region.cpp  region.hpp  trade_good.cpp  trade_good.hpp
src/: CMakeLists.txt  sample.conf
src/compitum/: adviser_quotes.txt  apparel.cpp  apparel.hpp  character.cpp  character.hpp  clock.cpp  clock.hpp  combat.cpp  combat.hpp  combat_action.hpp  config.cpp  config.hpp  dice.cpp  dice.hpp  estate_upgrades.txt  faction.hpp  game_progression.txt  hw11.c  infrastructure.cpp  infrastructure.hpp  interactor.cpp  interactor.hpp  inventory.hpp  main.cpp  population.cpp  population.hpp  region.cpp  region.hpp  trade_good.cpp  trade_good.hpp
